# quadtree_polygon_openCV

./: CMakeLists.txt  README.md  main.cpp  quadtree.hpp  quadtree_2.hpp  rtree.hpp  speed_test.cpp  test.cpp  test_qdtree.cpp  test_rtree.cpp
